--- a/seconnecter.html
+++ b/seconnecter.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
-<html>
-   <head>
-        <meta charset="utf-8">
-        <title>Connexion </title>
-         <img src ="image/V2V MUSIC LOGO 32.png" width="200" height="200">
+
+     {% extends "base.html" %}
+     
+    {% block title %} Connexion{% endblock %}
+
+    {% block css %}
+      {{ parent()}}
        <link rel="stylesheet" href="CSS/seconnecter.css">
-   </head> 
-   <body>
+    {% endblock %}
+
+       {% block header %}<img src ="image/V2V MUSIC LOGO 32.png" width="200" height="200">{% endblock %}
+
+       {% block nav %} {{parent()}} {% endblock %}
+  
+  {% block body %}
     <div id="main">
         <form> 
             <h1>Se connecter</h1>
@@ -19,7 +25,13 @@
                 <input type="password" id="mdp" placeholder="Mot de passe"/>
             </div>
               <button>Connexion</button>
+            <div id='compte'>
+                <h3>Pas de compte ? </h3>
+                <a href="sinscrire.php">Créer un compte</a>
+            </div>
         </form>
     </div>
-   </body>
-</html>
+    {% endblock %}
+
+    {% block footer %}{{parent()}}{% endblock %}
+
